tests/ui/nll/relate_tys/trait-hrtb.stderr
error[E0308]: mismatched types
  --> $DIR/trait-hrtb.rs:13:39
   |
LL |     let y: Box<dyn for<'a> Foo<'a>> = x;
   |                                       ^ one type is more general than the other
   |
   = note: expected trait object `dyn for<'a> Foo<'a>`
              found trait object `dyn Foo<'_>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
